# test-native-unity-plugin

./: .gitignore  CMakeLists.txt  README.md  build-local.sh  conanfile.txt
.github/workflows/: build.yaml
conan/: linux_arm.profile  macos.profile  windows.profile
include/: my_plugin.h
samples/SampleUnityProject/Assets/Samples/: ExampleScript.cs
samples/SampleUnityProject/ProjectSettings/: ProjectSettings.asset
src/: my_plugin.c
unity/: MyPlugin.cs
